--- a/src/layouts/kiosk/index.styl
+++ b/src/layouts/kiosk/index.styl
@@ -10,7 +10,7 @@
 	left 0
 	z-index 10
 	padding 20px
-	background white
+	background var(--sleek-surface-background-color)
 
 	.phead__logo
 		float right
@@ -19,4 +19,4 @@
 		float left
 		margin 0 20px 0 0
 		padding-right 20px
-		border-right 1px solid $silver
+		border-right 1px solid var(--sleek-divider-border-color)
