--- a/src/layouts/splash/index.styl
+++ b/src/layouts/splash/index.styl
@@ -8,9 +8,7 @@ body
 	flex-direction column
 	justify-content center
 	min-height 100vh
-	background-color lighten(mix($blue, $silver, 10%), 82.5%)
-	background radial-gradient(circle, transparent 20%, lighten(mix($blue, $silver, 10%), 82.5%) 20%, lighten(mix($blue, $silver, 10%), 82.5%) 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, lighten(mix($blue, $silver, 10%), 82.5%) 20%, lighten(mix($blue, $silver, 10%), 82.5%) 80%, transparent 80%, transparent) 1.5rem 1.5rem, linear-gradient(lighten($silver, 50%) 0.125rem, transparent 0.125rem) 0 -1px, linear-gradient(90deg, lighten($silver, 50%) 0.125rem, lighten(mix($blue, $silver, 10%), 82.5%) 0.125rem) -1px 0
-	background-size 3rem 3rem, 3rem 3rem, 1.5rem 1.5rem, 1.5rem 1.5rem
+	background-color var(--sleek-body-background-color)
 
 .phead
 	margin 2rem 0
