--- a/src/palette.styl
+++ b/src/palette.styl
@@ -14,14 +14,7 @@ $dark700 = mix($dark, $silver, 30%)
 
 $muted = lighten($dark, 25%)
 
-$shade = alpha($silver, 75%)
+$shade = lighten($silver, 50%)
 
 $blueglow = alpha($blue, 75%)
 $silverglow = alpha($silver, 75%)
-
-$shadow0 = alpha($dark, 2.5%) // Form fields.
-$shadow1 = alpha($dark, 5%)   // Regular panels, closest to page.
-$shadow2 = alpha($dark, 10%)  // Important panels, above regular panels.
-$shadow3 = alpha($dark, 15%)  // Dropdowns.
-$shadow5 = alpha($dark, 20%)  // Modals, bell menu.
-$shadow7 = alpha($dark, 25%)  // ?
