--- a/src/widgets/breadcrumb/index.styl
+++ b/src/widgets/breadcrumb/index.styl
@@ -17,7 +17,7 @@
 		min-width 0
 		white-space nowrap
 		text-overflow ellipsis
-		color $muted
+		color var(--sleek-text-muted-color)
 
 		&:last-child
 			max-width 16rem
