--- a/src/widgets/switch/index.styl
+++ b/src/widgets/switch/index.styl
@@ -33,7 +33,7 @@
 .switch__toggle::before
 	width 100%
 	height 100%
-	border 1px solid mix($dark, $silver, 10)
+	border 1px solid var(--sleek-field-border-color)
 	border-radius 0.25rem
 	box-shadow inset 0 1px 0 rgba(0, 0, 0, .075)
 	transition background-color $fast ease
@@ -44,9 +44,9 @@
 	width 20px
 	height 20px
 	margin 7px
-	border 1px solid $silver
+	border 1px solid var(--sleek-field-border-color)
 	border-radius 0.25rem
-	background-color white
+	background-color var(--sleek-field-background-color)
 	box-shadow 0 1px 0 alpha($dark, .075)
 	transition left $fast ease
 
