--- a/src/badge.styl
+++ b/src/badge.styl
@@ -6,8 +6,8 @@
 	display inline-block
 	padding 0 0.5rem
 	border-radius 0.25rem
-	background-color alpha($silver, 50%)
-	color mix($dark, $muted)
+	background-color var(--sleek-surface-shade-background-color)
+	color var(--sleek-text-muted-color)
 	transition background-color $fast ease-in
 
 	&:empty
