--- a/src/button.styl
+++ b/src/button.styl
@@ -43,7 +43,7 @@ _button(name, bg, edge=20%, hover=10%, active=20%)
 			transition box-shadow $fast ease-in
 			
 			.icon
-				filter luminosity(bg) < 0.5 ? invert(100%) sepia(100%) saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%) !important : none
+				filter luminosity(bg) < 0.5 ? var(--sleek-icon-invert-filter) !important : var(--sleek-icon-default-filter) !important
 
 		&.-{name}:hover,
 		&.-{name}:focus
@@ -52,10 +52,10 @@ _button(name, bg, edge=20%, hover=10%, active=20%)
 			box-shadow inset 0 0 0 0.125rem darken(bg, (edge+hover/2))
 			
 			.icon
-				filter luminosity(darken(bg, hover)) < 0.5 ? invert(100%) sepia(100%) saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%) !important : none
+				filter luminosity(darken(bg, hover)) < 0.5 ? var(--sleek-icon-invert-filter) !important : var(--sleek-icon-default-filter) !important
 
 		&.-{name}:focus
-			outline $blueglow auto 0.25rem
+			outline var(--sleek-link-hover-color) auto 0.25rem
 			outline-offset 0.25rem
 			box-shadow inset 0 0 0 0.125rem darken(bg, (edge+hover/2))
 			
@@ -66,7 +66,7 @@ _button(name, bg, edge=20%, hover=10%, active=20%)
 			box-shadow inset 0 0 0 0.125rem darken(bg, (edge+active/2))
 			
 			.icon
-				filter luminosity(darken(bg, active)) < 0.5 ? invert(100%) sepia(100%) saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%) !important : none
+				filter luminosity(darken(bg, active)) < 0.5 ? var(--sleek-icon-invert-filter) !important : var(--sleek-icon-default-filter) !important
 			
 		&.-{name}.-disabled,
 		&.-{name}[disabled]
@@ -80,27 +80,72 @@ _button(name, bg, edge=20%, hover=10%, active=20%)
 		box-shadow inset 0 0 0 0.125rem darken(bg, (edge+active/2))
 
 		.icon
-			filter luminosity(darken(bg, active)) < 0.5 ? invert(100%) sepia(100%) saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%) !important : none
+			filter luminosity(darken(bg, active)) < 0.5 ? var(--sleek-icon-invert-filter) !important : var(--sleek-icon-default-filter) !important
 
-_button('default', $silver)
-_button('blue', $blue)
 _button('red', $red)
-_button('simple', white)
+
+for x in 'default' 'blue' 'simple'
+	.btn
+		&.-{x}
+			border 1px solid var('--sleek-button-%s-border-color' % unquote(x))
+			background-color var('--sleek-button-%s-background-color' % unquote(x))
+			color var('--sleek-button-%s-color' % unquote(x))
+			transition box-shadow $fast ease-in
+			
+			.icon
+				filter var('--sleek-button-icon-%s-filter' % unquote(x)) !important
+
+		&.-{x}:hover,
+		&.-{x}:focus
+			border-color var('--sleek-button-%s-hover-border-color' % unquote(x))
+			color var('--sleek-button-%s-hover-color' % unquote(x))
+			box-shadow inset 0 0 0 0.125rem var('--sleek-button-%s-hover-shadow-color' % unquote(x))
+			
+			.icon
+				filter var('--sleek-button-icon-%s-hover-filter' % unquote(x)) !important
+
+		&.-{x}:focus
+			outline var(--sleek-link-hover-color) auto 0.25rem
+			outline-offset 0.25rem
+			box-shadow inset 0 0 0 0.125rem var('--sleek-button-%s-focus-shadow-color' % unquote(x))
+			
+		&.-{x}.-active
+			border-color var('--sleek-button-%s-active-border-color' % unquote(x))
+			background-color var('--sleek-button-%s-active-background-color' % unquote(x))
+			color var('--sleek-button-%s-active-color' % unquote(x))
+			box-shadow inset 0 0 0 0.125rem var('--sleek-button-%s-active-shadow-color' % unquote(x))
+			
+			.icon
+				filter var('--sleek-button-icon-%s-active-filter' % unquote(x)) !important
+			
+		&.-{x}.-disabled,
+		&.-{x}[disabled]
+			box-shadow none
+			cursor not-allowed
+
+	.-open > &.-{x}.-toggle
+		border-color var('--sleek-button-%s-active-border-color' % unquote(x))
+		background-color var('--sleek-button-%s-active-background-color' % unquote(x))
+		color var('--sleek-button-%s-active-color' % unquote(x))
+		box-shadow inset 0 0 0 0.125rem var('--sleek-button-icon-%s-active-filter' % unquote(x))
+
+		.icon
+			filter var('--sleek-button-icon-%s-active-filter' % unquote(x)) !important
 
 .btn.-subtle
 	border 1px solid transparent
 	background-color transparent
-	color $dark
+	color var(--sleek-text-default-color)
 
-	&.-subtle:hover,
-	&.-subtle:focus
-		border-color darken(white, 30%)
-		color $dark
+	&:hover,
+	&:focus
+		border-color var(--sleek-button-subtle-hover-border-color)
+		color var(--sleek-text-default-color)
 
-	.-open > &.-subtle.-toggle
+	.-open > &.-toggle
 		border-color darken(white, 40%)
 		background-color darken(white, 20%)
-		color $dark
+		color var(--sleek-text-default-color)
 
 .btngroup
 	display flex
