--- a/src/form.styl
+++ b/src/form.styl
@@ -15,32 +15,33 @@
 		display block
 		width 100%
 		padding 0.25rem 0.5rem
-		border 1px solid $dark500
+		border 1px solid var(--sleek-field-border-color)
 		border-radius 0.25rem
-		background-color white
-		color $dark
-		box-shadow inset 0 0.25rem 0.125rem $shadow0
+		background-color var(--sleek-surface-background-color)
+		color var(--sleek-text-default-color)
+		box-shadow inset 0 0.25rem 0.125rem var(--sleek-shadow-color-0)
 		transition border-color $fast ease-in, box-shadow $fast ease-in
 
 		&:focus
 			border-color $blue
 			outline 0
-			box-shadow inset 0 0.25rem 0.125rem $shadow0, 0 0 0 0.25rem $blueglow
+			box-shadow inset 0 0.25rem 0.125rem var(--sleek-shadow-color-0), 0 0 0 0.25rem var(--sleek-field-focus-border-color)
 			
 	&__field[readonly],
 	&__field[disabled]
-		background-color lighten($silver, 50%)
-		color alpha($dark, 0.75)
+		background-color var(--sleek-field-disabled-background-color)
+		color var(--sleek-field-disabled-color)
 		
 		&:focus
 			border-color mix($dark, $silver, 20)
-			box-shadow inset 0 0.25rem 0.125rem $shadow0, 0 0 0 0.25rem $blueglow
+			box-shadow inset 0 0.25rem 0.125rem var(--sleek-shadow-color-0), 0 0 0 0.25rem var(--sleek-field-disabled-focus-border-color)
 	
 	textarea.form__field
 		height auto
 
 	&__field.flatpickr-input[readonly]
-		background-color white
+		background-color var(--sleek-surface-background-color)
+		color var(--sleek-text-default-color)
 
 	&__brace
 		display table
@@ -70,7 +71,7 @@
 fieldset
 	margin 0 -20px 30px
 	padding 30px 20px 0
-	border-top 1px solid lighten($silver, 75%)
+	border-top 1px solid var(--sleek-surface-border-color-subtle)
 
 	.&__head
 		margin-bottom 15px
