--- a/src/table.styl
+++ b/src/table.styl
@@ -46,10 +46,10 @@
 	> thead > tr:not(:first-child),
 	> tbody > tr,
 	> tbody + tbody
-		border-top 1px solid lighten($silver, 50%)
+		border-top 1px solid var(--sleek-table-border-color)
 	
 	> tbody > tr:last-child
-		border-bottom 1px solid lighten($silver, 50%)
+		border-bottom 1px solid var(--sleek-table-border-color)
 
 	> thead > tr > td.active,
 	> tbody > tr > td.active,
@@ -67,10 +67,10 @@
 
 .table.-emphasis > tbody tr:hover
 .table.-emphasis > tbody tr:hover + tr
-	border-top-color $blueglow
+	border-top-color var(--sleek-table-row-hover-border-color)
 
 .table.-emphasis > tbody tr:last-child:hover
-	border-bottom-color $blueglow
+	border-bottom-color var(--sleek-table-row-hover-border-color)
 
 .tablebox
 	min-height .01%
@@ -82,4 +82,4 @@
 		width 100%
 		margin-bottom 15px
 		overflow-y hidden
-		border 1px solid lighten($silver, 50%)
+		border 1px solid var(--sleek-table-border-color)
