--- a/src/typography.styl
+++ b/src/typography.styl
@@ -6,7 +6,7 @@ body
 	font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, 'Hind Siliguri', Cantarell, 'Helvetica Neue', sans-serif
 	font-size 0.875rem
 	line-height 1.75em
-	color $dark
+	color var(--sleek-text-default-color)
 	direction 'ltr'
 
 h1,
@@ -29,18 +29,18 @@ h4
 
 a
 	text-decoration none
-	color darken($blue, 19.5%) // Achieves 4.5 contrast ratio on white background.
+	color var(--sleek-link-color)
 
 	&:hover,
 	&:focus
 		text-decoration underline
-		color darken($blue, 39%)
+		color var(--sleek-link-hover-color)
 	
 	&:active
-		color darken($blue, 39%)
+		color var(--sleek-link-hover-color)
 
 	&:focus-visible
-		outline $blueglow auto 0.25rem
+		outline var(--sleek-link-hover-color) auto 0.25rem
 		outline-offset 0.25rem
 	
 	&:focus,
@@ -52,7 +52,7 @@ a
 		&:hover,
 		&:focus,
 		&:active
-			color $dark
+			color var(--sleek-text-default-color)
 		
 
 blockquote :last-child
@@ -102,7 +102,7 @@ blockquote
 hr
 	margin 1.25rem 0
 	border 0
-	border-top 1px solid lighten($silver, 25%)
+	border-top 1px solid var(--sleek-surface-border-color-subtle)
 
 pre.-scroll
 	overflow-y auto
