--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -4,6 +4,9 @@
 @require '../../func'
 @require '../../palette'
 
+:root
+	--sleek-dropdown-item-hover-background-color $silverglow
+
 .dropdown
 	position relative
 	
@@ -24,11 +27,11 @@
 		min-width 150px
 		min-width max-content
 		margin 0.25rem 0
-		border 1px solid $silver
+		border 1px solid var(--sleek-surface-border-color)
 		border-radius 0.25rem
 		text-align left
-		background-color white
-		box-shadow 0 0.25rem 0.5rem $shadow3
+		background-color var(--sleek-surface-background-color)
+		box-shadow 0 0.25rem 0.5rem var(--sleek-shadow-color-3)
 		
 		&.-right
 			right 0
@@ -47,7 +50,7 @@
 	
 	&__item
 		padding 0.5rem 1rem
-		color $dark
+		color var(--sleek-text-default-color)
 		transition background-color $fast ease-in
 		
 		&.-link
@@ -56,7 +59,7 @@
 			&:hover,
 			&:focus
 				text-decoration none
-				color $dark
+				color var(--sleek-text-default-color)
 		
 		&.-drop
 			position relative
@@ -80,7 +83,7 @@
 
 			&:hover,
 			&:focus
-				background-color $silverglow
+				background-color var(--sleek-dropdown-item-hover-background-color)
 
 		&.-active
 			position relative
@@ -100,7 +103,7 @@
 		font-size 0.95em
 	
 	&__divider
-		border-bottom 1px solid $silver
+		border-bottom 1px solid var(--sleek-divider-border-color)
 
 		&:first-child,
 		&:last-child
@@ -118,7 +121,7 @@
 			display flex
 	
 	.-open > .dropdown__toggle
-		background-color $silverglow
+		background-color var(--sleek-dropdown-item-hover-background-color)
 		
 	&.-notifications
 		.dropdown__menu
@@ -139,8 +142,8 @@
 				right 0
 				bottom 0
 				z-index 1
-				background-color white
-				background linear-gradient(to right, transparent, white 1rem, white 100%)
+				background-color var(--sleek-surface-background-color)
+				background linear-gradient(to right, transparent, var(--sleek-surface-background-color) 1rem, var(--sleek-surface-background-color) 100%)
 				pointer-events none
 			
 			&::after
