--- a/src/widgets/strips/index.styl
+++ b/src/widgets/strips/index.styl
@@ -5,13 +5,13 @@
 
 .strips
 	margin -1rem -1.25rem -1rem
-	border-top 1px solid lighten($silver, 75%)
+	border-top 1px solid var(--sleek-surface-border-color-subtle)
 
 	&__item
 		display block
 		position relative
 		padding 0.5rem 1.25rem
-		border-bottom 1px solid lighten($silver, 75%)
+		border-bottom 1px solid var(--sleek-surface-border-color-subtle)
 		text-decoration none
 		transition background-color $fast ease-in
 		
@@ -25,7 +25,7 @@
 
 		&.-active
 			box-shadow inset 0.5rem 0 0 -0.25rem $blue
-			color $dark
+			color var(--sleek-text-default-color)
 
 			&:last-child
 				border-radius 0 0 0 0.25rem
