--- a/src/palette.styl
+++ b/src/palette.styl
@@ -3,8 +3,8 @@
 $dark   = #2f353b
 $ebony  = #22313f
 $blue   = #3598dc
-$green  = #26c281
-$red    = #e35b5a
+$green  = #009736
+$red    = #f14a53
 $orange = #e87e04
 $silver = #e7ecf1
 
