--- a/src/panel.styl
+++ b/src/panel.styl
@@ -45,8 +45,8 @@
 			bottom 0
 			left 0
 			padding 1rem 1.25rem
-			background-color alpha(white, 25%)
-			backdrop-filter blur(0.125rem)
+			background-color transparent
+			backdrop-filter blur(0.25rem)
 	
 	&:hover &__cover.-modest > picture
 		opacity 1
