Add alert link hover border colors

--- a/src/themes/dark.styl
+++ b/src/themes/dark.styl
@@ -69,14 +69,19 @@
 
     --sleek-alert-default-background-color darken(darken(#2a3948, 25%), 95%)
     --sleek-alert-default-border-color darken(#2a3948, 25%)
+    --sleek-alert-link-default-hover-border-color lighten(darken(#2a3948, 25%), 10%)
     --sleek-alert-blue-background-color #1b1e1f
     --sleek-alert-blue-border-color #1a6294
+    --sleek-alert-link-blue-hover-border-color darken(#1a6294, 30%)
     --sleek-alert-green-background-color #083326
     --sleek-alert-green-border-color #1e9b67
+    --sleek-alert-link-green-hover-border-color lighten(#1e9b67, 10%)
     --sleek-alert-red-background-color #320606
     --sleek-alert-red-border-color #891817
+    --sleek-alert-link-red-hover-border-color lighten(#891817, 10%)
     --sleek-alert-orange-background-color #3b2000
     --sleek-alert-orange-border-color #b56203
+    --sleek-alert-link-orange-hover-border-color lighten(#b56203, 10%)
     --sleek-alert-subtle-color alpha(white, 0.7)
 
     --sleek-text-default-color alpha(white, 0.9)
