--- a/src/themes/light.styl
+++ b/src/themes/light.styl
@@ -67,16 +67,22 @@
 
     --sleek-alert-default-background-color lighten($silver, 95%)
     --sleek-alert-default-border-color $silver
+    --sleek-alert-link-default-hover-border-color darken($silver, 30%)
     --sleek-alert-ebony-background-color lighten($ebony, 95%)
     --sleek-alert-ebony-border-color $ebony
+    --sleek-alert-link-ebony-hover-border-color darken($ebony, 30%)
     --sleek-alert-blue-background-color lighten($blue, 95%)
     --sleek-alert-blue-border-color $blue
+    --sleek-alert-link-blue-hover-border-color darken($blue, 30%)
     --sleek-alert-green-background-color lighten($green, 95%)
     --sleek-alert-green-border-color $green
+    --sleek-alert-link-green-hover-border-color darken($green, 30%)
     --sleek-alert-red-background-color lighten($red, 95%)
     --sleek-alert-red-border-color $red
+    --sleek-alert-link-red-hover-border-color darken($red, 30%)
     --sleek-alert-orange-background-color lighten($orange, 95%)
     --sleek-alert-orange-border-color $orange
+    --sleek-alert-link-orange-hover-border-color darken($orange, 30%)
     --sleek-alert-subtle-color lighten($dark, 50%)
 
     --sleek-text-default-color $dark
