Center picture in artifacts

--- a/src/artifact.styl
+++ b/src/artifact.styl
@@ -13,7 +13,7 @@
 			margin-top 1.5rem
 
 		> * > img,
-		> * > picture > img,
+		> * > picture,
 		> * > svg
 			display block
 			margin 0 auto 0.5rem
