Add kiosk layout body background color

--- a/src/layouts/kiosk/index.styl
+++ b/src/layouts/kiosk/index.styl
@@ -3,6 +3,9 @@
 @require '../../func'
 @require '../../palette'
 
+body
+	background-color var(--sleek-body-background-color)
+
 .phead
 	position fixed
 	top 0
@@ -14,7 +17,7 @@
 
 	.phead__logo
 		float right
-		
+
 	.phead__orglogo
 		float left
 		margin 0 20px 0 0
