Fix table active row color

--- a/src/table.styl
+++ b/src/table.styl
@@ -63,7 +63,7 @@
 	> thead > tr.active > th,
 	> tbody > tr.active > th,
 	> tfoot > tr.active > th
-		background-color lighten($silver, 75%)
+		background-color var(--sleek-surface-shade-background-color)
 
 .table.-emphasis > tbody tr:hover
 .table.-emphasis > tbody tr:hover + tr
