Allow icons in strips

--- a/src/widgets/strips/index.styl
+++ b/src/widgets/strips/index.styl
@@ -36,6 +36,15 @@
 			cursor default
 			opacity 0.75
 
+		.icon
+			margin-top -0.125rem
+
+			+ .text
+				margin-left 0.5rem
+
+		.text + .icon
+			margin-left 0.5rem
+
 @media (max-width: 991px)
 	.strips
 		> :not(.-active),
