Update button icon margins

--- a/src/button.styl
+++ b/src/button.styl
@@ -26,13 +26,13 @@
 		width 100%
 
 	.icon
-		margin-top -2px
+		margin-top -0.125rem
 
 		+ .text
-			margin-left 5px
+			margin-left 0.25rem
 
 	.text + .icon
-		margin-left 5px
+		margin-left 0.25rem
 
 _button(name, bg, edge=20%, hover=10%, active=20%)
 	.btn
