Use default cursor with readonly switches

--- a/src/widgets/switch/index.styl
+++ b/src/widgets/switch/index.styl
@@ -10,6 +10,7 @@
 .switch--readonly .switch__toggle::after
 	background-color #eee
 	box-shadow none
+	cursor default
 
 .switch__input
 	display none
