Add default border style

--- a/src/border.styl
+++ b/src/border.styl
@@ -14,6 +14,8 @@ _border(ns)
             border-{e} none
         .{ns}b{ec}-silver
             border-{e} 1px solid $silver
+        .{ns}b{ec}-default
+            border-{e} 1px solid var(--sleek-surface-border-color)
 
     for d in 1 2 4 8
         x = d == 1 ? 1 : s("%d-%d", 1, d)
