Tweak pfoot spacing

--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -26,7 +26,7 @@ body
 	&__logo
 		float left
 		padding 1rem 0
-	
+
 	&.-shade
 		border-bottom 1px solid var(--sleek-surface-border-color)
 		box-shadow 0 0.0625rem 0.125rem var(--sleek-shadow-color-1)
@@ -38,7 +38,7 @@ body
 	&__item
 		position relative
 		display block
-	
+
 		&.-user
 			margin-left 0.5rem
 
@@ -78,11 +78,11 @@ body
 		&.-link
 			padding 8px
 			line-height 24px
-		
+
 		&.-drop > a
 			display block
 			padding 8px
-		
+
 		.badge
 			position absolute
 			bottom 0
@@ -100,8 +100,8 @@ body
 		height 1rem
 
 .pfoot
-	margin-top auto
-	padding 1rem 0
+	margin-top 5rem
+	padding 3rem 0 1rem
 	border-top 1px solid var(--sleek-surface-border-color)
 	color var(--sleek-text-muted-color)
 
