--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -53,6 +53,7 @@
 		min-width 150px
 		min-width max-content
 		margin 0.25rem 0
+		padding 0.25rem
 		border 1px solid var(--sleek-surface-border-color)
 		border-radius 0.25rem
 		text-align left
@@ -76,6 +77,7 @@
 
 	&__item
 		padding 0.5rem 1rem
+		border-radius 0.25rem
 		color var(--sleek-text-default-color)
 		transition background-color $fast ease-in
 
@@ -106,6 +108,7 @@
 
 		&.-active
 			position relative
+			background-color var(--sleek-dropdown-item-hover-background-color)
 			box-shadow inset 0.5rem 0 0 -0.25rem $blue
 
 		&.-disabled
@@ -139,6 +142,7 @@
 		box-shadow 0 0.0625rem 0.125rem var(--sleek-shadow-color-1)
 
 	&__divider
+		margin 0.25rem -0.25rem
 		border-bottom 1px solid var(--sleek-divider-border-color)
 
 		&:first-child,
