Add typography utilities

--- a/src/typography.styl
+++ b/src/typography.styl
@@ -107,3 +107,9 @@ hr
 pre.-scroll
 	overflow-y auto
 	-webkit-overflow-scrolling touch
+
+.font-mono
+	font-family 'Ubuntu Mono', 'Courier New', monospace
+
+.font-600
+	font-weight 600
