Tweak dark color

--- a/src/palette.styl
+++ b/src/palette.styl
@@ -1,6 +1,6 @@
 // Copyright 2024 Furqan Software Ltd. All Rights Reserved.
 
-$dark   = #2f353b
+$dark   = #0c0a09
 $ebony  = #22313f
 $blue   = #3598dc
 $green  = #009736
