--- a/src/reset.styl
+++ b/src/reset.styl
@@ -72,7 +72,7 @@ select
 		height auto
 
 ::placeholder
-	color lighten(#2f353b, 25%)
+	color lighten(#0c0a09, 25%)
 	opacity 1
 
 // TO REMOVE OR MOVE ELSEWHERE
