Add staging tape style

--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -12,6 +12,10 @@
 body
 	background-color var(--sleek-arena-body-background-color)
 
+	&.-staging
+		border-top 0.25rem solid transparent
+		border-image repeating-linear-gradient(90deg, #fef08a, #fef08a 1rem, $dark 1rem, $dark 2rem) 1
+
 .phead
 	&__logo
 		float left
