--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -14,6 +14,10 @@ body
 	min-height 100vh
 	background-color var(--sleek-body-background-color)
 
+	&.-staging
+		border-top 0.25rem solid transparent
+		border-image repeating-linear-gradient(90deg, #fef08a, #fef08a 1rem, $dark 1rem, $dark 2rem) 1
+
 .phead
 	margin-bottom 1.5rem
 	border-bottom 1px solid var(--sleek-surface-border-color-subtle)
