--- a/scss/layouts/site/dark.scss
+++ b/scss/layouts/site/dark.scss
@@ -1,6 +1,6 @@
 // Copyright 2024 Furqan Software Ltd. All Rights Reserved.
 
 :root {
-    --sleek-site-pmenu-item-hover-background-color: alpha(#232627, 0.75);
+    --sleek-site-pmenu-item-hover-background-color: #{rgba(#232627, 0.75)};
     --sleek-site-pmenu-icon-filter: invert(100%);
 }
