--- a/scss/layouts/site/parts/pnav.dark.scss
+++ b/scss/layouts/site/parts/pnav.dark.scss
@@ -1,5 +1,5 @@
 // Copyright 2024 Furqan Software Ltd. All Rights Reserved.
 
 :root {
-    --sleek-pnav-menu-item-hover-background-color: alpha(#232627, 0.75);
+    --sleek-pnav-menu-item-hover-background-color: #{rgba(#232627, 0.75)};
 }
