--- a/scss/themes/dark.scss
+++ b/scss/themes/dark.scss
@@ -1,5 +1,6 @@
 // Copyright 2024 Furqan Software Ltd. All Rights Reserved.
 
+@use "sass:color";
 @use "../palette";
 
 // $silver = #2a3948
@@ -8,114 +9,183 @@
     --sleek-body-background-color: #1b1d1e;
 
     --sleek-surface-background-color: #181a1b;
-    --sleek-surface-shade-background-color: alpha(#232627, 75%);
-    --sleek-surface-border-color: darken(#2a3948, 25%);
-    --sleek-surface-border-color-subtle: darken(#2a3948, 45%);
-    --sleek-surface-highlight-border-color: $blue;
+    --sleek-surface-shade-background-color: #{rgba(#232627, 75%)};
+    --sleek-surface-border-color: #{color.scale(#2a3948, $lightness: -25%)};
+    --sleek-surface-border-color-subtle: #{color.scale(
+            #2a3948,
+            $lightness: -45%
+        )};
+    --sleek-surface-highlight-border-color: palette.$blue;
 
     --sleek-field-background-color: #181a1b;
-    --sleek-field-border-color: darken(#2a3948, 25%);
-    --sleek-field-focus-border-color: alpha($blue, 75%);
+    --sleek-field-border-color: #{color.scale(#2a3948, $lightness: -25%)};
+    --sleek-field-focus-border-color: #{rgba(palette.$blue, 75%)};
     --sleek-field-disabled-background-color: #181a1b;
-    --sleek-field-disabled-color: alpha(white, 50%);
-    --sleek-field-disabled-focus-border-color: darken(#2a3948, 25%);
+    --sleek-field-disabled-color: #{rgba(white, 50%)};
+    --sleek-field-disabled-focus-border-color: #{color.scale(
+            #2a3948,
+            $lightness: -25%
+        )};
 
     --sleek-button-default-background-color: #232627;
     --sleek-button-default-border-color: #34475a;
-    --sleek-button-default-color: alpha(white, 0.9);
+    --sleek-button-default-color: #{rgba(white, 0.9)};
     --sleek-button-icon-default-filter: invert(100%) sepia(100%) saturate(0%)
         hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-default-hover-border-color: lighten(#34475a, 10%);
-    --sleek-button-default-hover-color: alpha(white, 0.9);
-    --sleek-button-default-hover-shadow-color: lighten(#34475a, 5%);
+    --sleek-button-default-hover-border-color: #{color.scale(
+            #34475a,
+            $lightness: 10%
+        )};
+    --sleek-button-default-hover-color: #{rgba(white, 0.9)};
+    --sleek-button-default-hover-shadow-color: #{color.scale(
+            #34475a,
+            $lightness: 5%
+        )};
     --sleek-button-icon-default-hover-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-default-focus-shadow-color: lighten(#34475a, 5%);
+    --sleek-button-default-focus-shadow-color: #{color.scale(
+            #34475a,
+            $lightness: 5%
+        )};
     --sleek-button-default-active-background-color: #34475a;
-    --sleek-button-default-active-border-color: lighten(#34475a, 20%);
-    --sleek-button-default-active-color: alpha(white, 0.9);
-    --sleek-button-default-active-shadow-color: lighten(#34475a, 5%);
+    --sleek-button-default-active-border-color: #{color.scale(
+            #34475a,
+            $lightness: 20%
+        )};
+    --sleek-button-default-active-color: #{rgba(white, 0.9)};
+    --sleek-button-default-active-shadow-color: #{color.scale(
+            #34475a,
+            $lightness: 5%
+        )};
     --sleek-button-icon-default-active-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-blue-background-color: $blue;
-    --sleek-button-blue-border-color: darken($blue, 20%);
-    --sleek-button-blue-color: alpha(white, 0.9);
+    --sleek-button-blue-background-color: palette.$blue;
+    --sleek-button-blue-border-color: #{color.scale(
+            palette.$blue,
+            $lightness: -20%
+        )};
+    --sleek-button-blue-color: #{rgba(white, 0.9)};
     --sleek-button-icon-blue-filter: invert(100%) sepia(100%) saturate(0%)
         hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-blue-hover-border-color: darken($blue, 30%);
-    --sleek-button-blue-hover-color: alpha(white, 0.9);
-    --sleek-button-blue-hover-shadow-color: darken($blue, 15%);
+    --sleek-button-blue-hover-border-color: #{color.scale(
+            palette.$blue,
+            $lightness: -30%
+        )};
+    --sleek-button-blue-hover-color: #{rgba(white, 0.9)};
+    --sleek-button-blue-hover-shadow-color: #{color.scale(
+            palette.$blue,
+            $lightness: -15%
+        )};
     --sleek-button-icon-blue-hover-filter: invert(100%) sepia(100%) saturate(0%)
         hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-blue-focus-shadow-color: darken($blue, 15%);
-    --sleek-button-blue-active-background-color: $blue;
-    --sleek-button-blue-active-border-color: darken($blue, 40%);
-    --sleek-button-blue-active-color: alpha(white, 0.9);
-    --sleek-button-blue-active-shadow-color: darken($blue, 15%);
+    --sleek-button-blue-focus-shadow-color: #{color.scale(
+            palette.$blue,
+            $lightness: -15%
+        )};
+    --sleek-button-blue-active-background-color: palette.$blue;
+    --sleek-button-blue-active-border-color: #{color.scale(
+            palette.$blue,
+            $lightness: -40%
+        )};
+    --sleek-button-blue-active-color: #{rgba(white, 0.9)};
+    --sleek-button-blue-active-shadow-color: #{color.scale(
+            palette.$blue,
+            $lightness: -15%
+        )};
     --sleek-button-icon-blue-active-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
     --sleek-button-simple-background-color: #181a1b;
-    --sleek-button-simple-border-color: lighten(#181a1b, 20%);
-    --sleek-button-simple-color: alpha(white, 0.9);
+    --sleek-button-simple-border-color: #{color.scale(#181a1b, $lightness: 20%)};
+    --sleek-button-simple-color: #{rgba(white, 0.9)};
     --sleek-button-icon-simple-filter: invert(100%) sepia(100%) saturate(0%)
         hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-simple-hover-border-color: lighten(#181a1b, 30%);
-    --sleek-button-simple-hover-color: alpha(white, 0.9);
-    --sleek-button-simple-hover-shadow-color: lighten(#181a1b, 15%);
+    --sleek-button-simple-hover-border-color: #{color.scale(
+            #181a1b,
+            $lightness: 30%
+        )};
+    --sleek-button-simple-hover-color: #{rgba(white, 0.9)};
+    --sleek-button-simple-hover-shadow-color: #{color.scale(
+            #181a1b,
+            $lightness: 15%
+        )};
     --sleek-button-icon-simple-hover-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-simple-focus-shadow-color: lighten(#181a1b, 15%);
-    --sleek-button-simple-active-background-color: lighten(#181a1b, 20%);
-    --sleek-button-simple-active-border-color: lighten(#181a1b, 40%);
-    --sleek-button-simple-active-color: alpha(white, 0.9);
-    --sleek-button-simple-active-shadow-color: lighten(#181a1b, 15%);
+    --sleek-button-simple-focus-shadow-color: #{color.scale(
+            #181a1b,
+            $lightness: 15%
+        )};
+    --sleek-button-simple-active-background-color: #{color.scale(
+            #181a1b,
+            $lightness: 20%
+        )};
+    --sleek-button-simple-active-border-color: #{color.scale(
+            #181a1b,
+            $lightness: 40%
+        )};
+    --sleek-button-simple-active-color: #{rgba(white, 0.9)};
+    --sleek-button-simple-active-shadow-color: #{color.scale(
+            #181a1b,
+            $lightness: 15%
+        )};
     --sleek-button-icon-simple-active-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
     --sleek-button-subtle-hover-border-color: #454b4e;
 
-    --sleek-table-border-color: darken(#2a3948, 42.5%);
-    --sleek-table-row-hover-border-color: $blue;
+    --sleek-table-border-color: #{color.scale(#2a3948, $lightness: -42.5%)};
+    --sleek-table-row-hover-border-color: palette.$blue;
 
-    --sleek-alert-default-background-color: darken(darken(#2a3948, 25%), 95%);
-    --sleek-alert-default-border-color: darken(#2a3948, 25%);
-    --sleek-alert-link-default-hover-border-color: lighten(
-        darken(#2a3948, 25%),
-        10%
-    );
+    --sleek-alert-default-background-color: #{color.scale(
+            color.scale(#2a3948, $lightness: -25%),
+            $lightness: -95%
+        )};
+    --sleek-alert-default-border-color: #{color.scale(
+            #2a3948,
+            $lightness: -25%
+        )};
+    --sleek-alert-link-default-hover-border-color: #{color.scale(
+            color.scale(#2a3948, $lightness: -25%),
+            $lightness: 10%
+        )};
     --sleek-alert-blue-background-color: #1b1e1f;
     --sleek-alert-blue-border-color: #1a6294;
-    --sleek-alert-link-blue-hover-border-color: darken(#1a6294, 30%);
+    --sleek-alert-link-blue-hover-border-color: #{color.scale(
+            #1a6294,
+            $lightness: -30%
+        )};
     --sleek-alert-green-background-color: #083326;
     --sleek-alert-green-border-color: #1e9b67;
-    --sleek-alert-link-green-hover-border-color: lighten(#1e9b67, 10%);
+    --sleek-alert-link-green-hover-border-color: #{color.scale(
+            #1e9b67,
+            $lightness: 10%
+        )};
     --sleek-alert-red-background-color: #320606;
     --sleek-alert-red-border-color: #891817;
-    --sleek-alert-link-red-hover-border-color: lighten(#891817, 10%);
+    --sleek-alert-link-red-hover-border-color: #{color.scale(
+            #891817,
+            $lightness: 10%
+        )};
     --sleek-alert-orange-background-color: #3b2000;
     --sleek-alert-orange-border-color: #b56203;
-    --sleek-alert-link-orange-hover-border-color: lighten(#b56203, 10%);
-    --sleek-alert-subtle-color: alpha(white, 0.7);
+    --sleek-alert-link-orange-hover-border-color: #{color.scale(
+            #b56203,
+            $lightness: 10%
+        )};
+    --sleek-alert-subtle-color: #{rgba(white, 0.7)};
 
-    --sleek-text-default-color: alpha(white, 0.9);
-    --sleek-text-muted-color: alpha(white, 0.7);
+    --sleek-text-default-color: #{rgba(white, 0.9)};
+    --sleek-text-muted-color: #{rgba(white, 0.7)};
 
-    --sleek-link-color: $blue;
-    --sleek-link-hover-color: lighten($blue, 19.5%);
-    --sleek-link-muted-color: alpha(white, 0.7);
-    --sleek-link-muted-hover-color: alpha(white, 0.9);
+    --sleek-link-color: palette.$blue;
+    --sleek-link-hover-color: #{color.scale(palette.$blue, $lightness: 19.5%)};
+    --sleek-link-muted-color: #{rgba(white, 0.7)};
+    --sleek-link-muted-hover-color: #{rgba(white, 0.9)};
 
     --sleek-divider-border-color: #283344;
 
-    --sleek-shadow-color-0: darken(#181a1b, 2.5%); // Form fields.
-    --sleek-shadow-color-1: darken(
-        #181a1b,
-        5%
-    ); // Regular panels, closest to page.
-    --sleek-shadow-color-2: darken(
-        #181a1b,
-        10%
-    ); // Important panels, above regular panels.
-    --sleek-shadow-color-3: darken(#181a1b, 15%); // Dropdowns.
-    --sleek-shadow-color-5: darken(#181a1b, 20%); // Modals, bell menu.
-    --sleek-shadow-color-7: darken(#181a1b, 25%); // ?
+    --sleek-shadow-color-0: #{color.scale(#181a1b, $lightness: -2.5%)}; // Form fields.
+    --sleek-shadow-color-1: #{color.scale(#181a1b, $lightness: -5%)}; // Regular panels, closest to page.
+    --sleek-shadow-color-2: #{color.scale(#181a1b, $lightness: -10%)}; // Important panels, above regular panels.
+    --sleek-shadow-color-3: #{color.scale(#181a1b, $lightness: -15%)}; // Dropdowns.
+    --sleek-shadow-color-5: #{color.scale(#181a1b, $lightness: -20%)}; // Modals, bell menu.
+    --sleek-shadow-color-7: #{color.scale(#181a1b, $lightness: -25%)}; // ?
 }
