--- a/scss/_code.scss
+++ b/scss/_code.scss
@@ -1,8 +1,10 @@
 // Copyright 2026 Furqan Software Ltd. All Rights Reserved.
 
+@use "./const";
+
 pre,
 code {
-    font-family: "Ubuntu Mono", "Courier New", monospace;
+    font-family: const.$font-family-monospace;
 }
 
 .prebox {
