--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -6,17 +6,7 @@
 @use "./palette";
 
 body {
-    font-family:
-        Ubuntu,
-        "Hind Siliguri",
-        -apple-system,
-        BlinkMacSystemFont,
-        "Segoe UI",
-        Roboto,
-        Oxygen-Sans,
-        Cantarell,
-        "Helvetica Neue",
-        sans-serif;
+    font-family: const.$font-family-sans-serif;
     font-size: 0.875rem;
     line-height: 1.75em;
     color: var(--sleek-text-default-color);
@@ -149,7 +139,7 @@ pre.-scroll {
 }
 
 .font-mono {
-    font-family: "Ubuntu Mono", "Courier New", monospace;
+    font-family: const.$font-family-monospace;
 }
 
 $_seen: ();
